# SOT

./: CMakeLists.txt
include/sot_bits/: common.h
test/: CMakeLists.txt
